# lab8

./: .gitignore  CMakeLists.txt  README.md  server.c
data/: Websites.json  data.txt
include/: jsonCreate.h  uriRequest.h
src/: jsonCreate.c  uriRequest.c
